--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Steve Latif
 description: Worber Bee from Santa Cruz
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-https://avatars0.githubusercontent.com/u/746170?v=3&s=400
+avatar: https://avatars0.githubusercontent.com/u/746170?v=3&s=400
 #
 # Flags below are optional
 #
